Revised YARN drill bit launch script
Revised Drill launch script under YARN. Merges drill-env.sh properties
with those set in Drill-on-YARN.